--- a/pathfinding_visualizer/src/App.css
+++ b/pathfinding_visualizer/src/App.css
@@ -1,1 +1,26 @@
+.Node {
+  border: 2px solid black;
+  padding: 10px 10px 10px 10px;
+  display: inline-block;
+}
 
+.RowContainer {
+  margin: 0 auto;
+  display: inline-block;
+  width: 80%;
+  text-align: center;
+}
+
+.Start {
+  border: 2px solid black;
+  padding: 10px 10px 10px 10px;
+  display: inline-block;
+  background-color: blue;
+}
+
+.End {
+  border: 2px solid black;
+  padding: 10px 10px 10px 10px;
+  display: inline-block;
+  background-color: red;
+}
