--- a/pathfinding_visualizer/src/App.css
+++ b/pathfinding_visualizer/src/App.css
@@ -24,3 +24,10 @@
   display: inline-block;
   background-color: red;
 }
+
+.Path {
+  border: 2px solid black;
+  padding: 10px 10px 10px 10px;
+  display: inline-block;
+  background-color: green;
+}
