--- a/pathfinding_visualizer/src/App.css
+++ b/pathfinding_visualizer/src/App.css
@@ -48,8 +48,9 @@
 }
 
 .Visited {
-  border: 2px solid black;
-  padding: 10px 10px 10px 10px;
+  border: 0.5px solid rgb(0, 153, 255);
+  width: 20px;
+  height: 20px;
   display: inline-block;
   background-color: lightgrey;
 }
