--- a/pathfinding_visualizer/src/App.css
+++ b/pathfinding_visualizer/src/App.css
@@ -9,7 +9,6 @@
   text-align: center;
   width:80%;
   margin: 5% 10% 5% 10%;
-  text-align: center;
   display: inline-block;
 }
 
@@ -18,6 +17,11 @@
   height: 20px;
   margin: 0px 10% 0px 10%;
   text-align: center;
+}
+
+.StatusTitle {
+  font-size: 1.5rem;
+  color: darkslateblue;
 }
 
 .Start {
