--- a/pathfinding_visualizer/src/App.css
+++ b/pathfinding_visualizer/src/App.css
@@ -67,7 +67,7 @@
   width: 20px;
   height: 20px;
   display: inline-block;
-  background-color: black;
+  background-color: #3d7499;
 }
 
 .HideThis {
